[package]
name = "ruspiro-brain"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = """
The ``Brain`` provides the heart of the async "thinking" of a **RusPiRo** bare metal kernel for the
Raspberry Pi.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-brain/tree/v0.1.0"
documentation = "https://docs.rs/ruspiro-brain/0.1.0"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "brain", "async"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = ["/pi_test"]


[badges]
travis-ci = { repository = "RusPiRo/ruspiro-brain", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dev-dependencies]
assert_matches = "1.2"
futures-util = { version = "0.3.5", default-features = false }

[dependencies]
pin-utils = "0.1.0-alpha.4"
either = { version = "1.5.3", default-features = false }
ruspiro-singleton = "0.3"
ruspiro-lock = "0.3"
ruspiro-interrupt = "0.3"
#ruspiro-timer = "0.4"
#ruspiro-console = "0.3"

[features]
ruspiro_pi3 = [
#    "ruspiro-timer/ruspiro_pi3"
]
