[package]
name = "ruspiro-brain"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = """
The ``Brain`` provides the heart of the async "thinking" of a **RusPiRo** bare metal kernel for the
Raspberry Pi.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-brain/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-brain/||VERSION||"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "brain", "async"]
categories = ["no-std", "embedded"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]


[badges]
travis-ci = { repository = "RusPiRo/ruspiro-brain", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dev-dependencies]
assert_matches = "1.4"
futures-util = { version = "0.3", default-features = false }

[dependencies]
pin-utils = "0.1.0-alpha.4"
either = { version = "1.6", default-features = false }
ruspiro-singleton = "0.4"
ruspiro-lock = "0.4"
ruspiro-interrupt = "0.3"
ruspiro-channel = { git = "https://github.com/RusPiRo/ruspiro-channel.git" }

[features]
