[package]
name = "ruspiro-brain-macros"
authors = ["Andre Borrmann <pspwizard@gmx.de>"]
version = "0.1.0" # remember to update html_root_url
description = """
Procedural macros to help using the ``ruspiro-brain`` crate.
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-brain-macros/tree/v0.1.0"
documentation = "https://docs.rs/ruspiro-brain-macros/0.1.0"
readme = "README.md"
keywords = ["RusPiRo", "baremetal", "raspberrypi", "brain"]
categories = ["no-std", "embedded"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
ruspiro-brain = { path = "../", version = "*", features = ["ruspiro_pi3"] }

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15.42", features = ["extra-traits", "full", "visit", "fold"] }
quote = "0.6.13"

[features]