[package]
name = "ruspiro-pi-test"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.0"
description = """
Test kernel to be deployed to the Pi to run on-device tests for a certain crate's functionality
"""
license = "Apache-2.0"
edition = "2018"
publish = false

[[bin]]
name = "kernel"
path = "./src/kernel.rs"

[dependencies]
ruspiro-boot = { path = "../../boot" }
ruspiro-allocator = { path = "../../allocator" }
ruspiro-console ="0.3"
ruspiro-brain = { path = "../" }

[features]
ruspiro_pi3 = [ 
    "ruspiro-boot/ruspiro_pi3",
]

[patch.crates-io]
ruspiro-mailbox = { path = "../../mailbox" }
#ruspiro-lock = { path = "../../lock" }
#ruspiro-allocator = { path = "../../allocator" }
ruspiro-console = { path = "../../console" }
ruspiro-cache = { path = "../../cache" }